[Gradle|Exec] fix: resolve Gradle JVM arguments from the gradle.properties file in the build root
The IDE resolves build root by the defined working directory in the BuildEnvironment. We have two cases where working directory isn't a build root:
 1. Working root corresponds to the Gradle subproject. In this case, we find the nearest parent directory with settings.gradle[.kts] file. This directory will be our build root.
 2. Working root corresponds to the Gradle subproject in the included build. This case, also, can be divided by two cases:
    * We execute a Gradle run configuration. In this case, we resolve the working root like as we do it in the first case.
    * We execute a Gradle sync. In this case, we reuse the BuildEnvironment from a parent included build or project root build. Then we use it for the resolution from the first case. This case may happen only on the old Gradle versions, because the Gradle is newer than 8.0 can resolve all included builds inside the one Gradle model fetch request.

Issues IDEA-363359, IDEA-344664

GitOrigin-RevId: ccc73b78321d1a6983a897f34cfaff3493dd3e5b